2014-02-12  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/readline.c (msdos_getch):  Handle extended key codes returned
	from term->waitforinput.

2014-02-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/qt_term.cpp (qt_connectToServer):
	The timeout parameter in socket.waitForConnected() cannot be used to
	wait for an unready socket, as that returns an error immediately.
	Rewrite the delay loop using an explicit GP_SLEEP() instead.
	Also increase the overall timeout for the retry loop.

2014-02-09  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotWidget.*: QtGnuplotWidget emits a signal
	after a plot is done

2014-02-04  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/wxterminal/wxt_gui.h:  New configure option
	--with-wx-single-threaded forces the WXT_MONOTHREADED code option even
	if the platform otherwise would default to WXT_MULTITHREADED.
	This provides a workaround for reported problems using the wxt terminal
	on Haswell CPUs, where apparently gnuplot's use of a mutex to
	synchronize communication with the gui can fail badly.

	* term/svg.trm:  Remove "horrible kludge" added in 2011 to work around
	a bug in Firefox 3.x rendering.  Now it is causing more problems than it
	solves.

2014-01-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise):  Fix off-by-one allocation error
	affecting cvs files.
	Bug #1333

2014-01-31  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotScene.* src/qtterminal/QtGnuplotItems.*:
	introduce a new QGraphicsItem type that gathers consecutive points, lines
	and polygons. It greatly improves the rendering speed of plots with a large
	number of these elements by reducing the number of QGraphicsItem that the
	scene has to manage.
	Patch #651

2014-01-30  Jon Gjengset <jon@thesquareplanet.com>

	* src/gp_types.h src/interpol.c src/interpol.h src/plot2d.c